--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Hello there</title>
+    <title>Void Dodge</title>
   </head>
   <body>
     <div id="app" class="app">
